.postLoop {   border: 1px solid #c9ff23;   padding:4px;   margin: 4px;   display: flex;   flex-wrap: wrap;   flex-direction: row-reverse;     background: url(https://www.nasa.gov/wp-content/uploads/2018/10/parachute-16.gif);   background-size: cover;   background-attachment: fixed;
}
.postLoop > * {
  border: 1px solid #c9ff23;
  border-radius: 1px;
  padding:5px;
  background-color: rgb(96 139 168 / 0.2);
  flex: 1 1 250px;
}
 .postLoop h3 span {
    display: inline-block;
    color: white;
    letter-spacing: -1px;
    background: rgb(0, 0, 0); /* fallback color */
    background: rgba(0, 0, 0, 0.7);
    padding: 10px;
  } @nasa-jpl @blackgirlscode @whitehouse

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -180,6 +180,7 @@ p:first-of-type {
     display:block;
   }
 
+
   .postLoop {
     border: 1px solid #c9ff23;
     padding:4px;
@@ -196,16 +197,17 @@ p:first-of-type {
     border: 1px solid #c9ff23;
     border-radius: 1px;
     padding:5px;
-   
+    background-color: rgb(96 139 168 / 0.2);
     flex: 1 1 250px;
   }
    .postLoop h3 span {
       display: inline-block;
       color: white;
       letter-spacing: -1px;
-
+      background: rgb(0, 0, 0); /* fallback color */
+      background: rgba(0, 0, 0, 0.7);
       padding: 10px;
-   }
+    }
 
   .tupperware > * {
     border: 1px solid #c9ff23;
